# hindsight

./: .env.example  .gitignore  PAPER_ROADMAP.md  README.md  ROADMAP.md  main.py  pyproject.toml  temp
backend/: .env.example  config.py  langfuse_api.py  llm_usage_stream.py  pipeline_topology.py  requirements.txt  run_registry.py  server.py  stream_handler.py  supabase_runs.py  tool_stream.py
cli/: main.py  utils.py
docs/paper/: STORY_LOCK.md  bib-seed.bib  claim-evidence-map.md  manuscript.md  outline.md  paper-roadmap.md
frontend/: .env.example  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ActivePipeline.tsx  AgentDetailsPanel.tsx  AgentFlowchart.tsx  AgentNode.tsx  AgentReactFlow.tsx  AppHeader.tsx  ControlDeck.tsx  DateDial.tsx  DebateCollapsibleEntry.tsx  DecisionDisplay.tsx  EngageButton.tsx  LeftRail.tsx  MarkdownContent.tsx  ReportCard.tsx  ThoughtTrace.tsx  TickerInput.tsx
frontend/hooks/: useAgentStream.ts  useBackendHealth.ts
frontend/lib/: liveTiles.ts  pipelineGraph.ts  pipelineToReactFlow.ts  presets.ts  publicBackend.ts  types.ts
scripts/: analyze_run_log.py  backtest_ablation_analysis.ipynb  backtest_analysis.ipynb  backtest_mvp.py  backtest_mvp_ablations.py  kite_token_server.py
tradingagents/: default_config.py  paper_ablation.py  runtime_warnings.py
tradingagents/anonymization/: __init__.py  noun_scrubber.py  ticker_map.py
tradingagents/backtest/: __init__.py  dates_schedule.py  ledger.py  metrics.py  prices.py  runner.py  signals.py  structured_literals.py  (+1 more)
(+69 files in other folders)
